--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -14,7 +14,7 @@
           <button class="btn">English</button>
           <button class="btn btn-red-sm">Sign In</button>
         </div>
-      </nav>
+      </nav>n
       <div class="box"></div>
       <div class="hero">
         <span>Unlimited movies, TV shows and more</span>
