--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
           <button class="btn">English</button>
           <button class="btn btn-red-sm">Sign In</button>
         </div>
-      </nav>n
+      </nav>
+
       <div class="box"></div>
       <div class="hero">
         <span>Unlimited movies, TV shows and more</span>
@@ -25,11 +26,27 @@
         >
         <div class="hero-buttons">
           <input type="text" placeholder="Email Address" />
-          <button class="btn btn-red">Get Started</button>
+          <button class="btn btn-red">Get Started &gt;</button>
         </div>
       </div>
 
       <div class="separation"></div>
+
     </div>
+
+    <section class="first">
+      <div>
+        Enjoy on your TV
+Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+
+      </div>
+
+      <div class="secImg">
+          <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
+          <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" autoplay loop muted> </video>
+          
+      </div>
+    </section>
   </body>
+  
 </html>
