--- a/index.html
+++ b/index.html
@@ -175,5 +175,43 @@
       </div>
       
     </section>
+    <div class="separation"></div>
+
+    <footer>
+      <div class="footer-item">
+        <a href="faq">FAQ</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+      </div>
+
+      <div class="footer-item">
+        <a href="faq">FAQ</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+      </div>
+
+      <div class="footer-item">
+        <a href="faq">FAQ</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+      </div>
+
+      <div class="footer-item">
+        <a href="faq">FAQ</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+        <a href="faq">Investor Relations</a>
+      </div>
+
+
+
+    </footer>
   </body>
 </html>
