--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 
     <footer>
       <div class="footer-item">
+        Questions? Call 000-800-919-1694
         <a href="faq">FAQ</a>
         <a href="faq">Investor Relations</a>
         <a href="faq">Investor Relations</a>
