--- a/index.html
+++ b/index.html
@@ -178,8 +178,10 @@
     <div class="separation"></div>
 
     <footer>
+      Questions? Call 000-800-919-1694
+      <div class="footer">
       <div class="footer-item">
-        Questions? Call 000-800-919-1694
+        
         <a href="faq">FAQ</a>
         <a href="faq">Investor Relations</a>
         <a href="faq">Investor Relations</a>
@@ -210,6 +212,7 @@
         <a href="faq">Investor Relations</a>
         <a href="faq">Investor Relations</a>
       </div>
+    </div>
 
 
 
