--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="secImg">
         <img
-          src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png"
+          src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png"
           alt=""
         />
         <video
@@ -184,33 +184,29 @@
         
         <a href="faq">FAQ</a>
         <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
+        <a href="faq">Privacy</a>
+        <a href="faq">Speed test</a>
+        <a href="faq">Netflix India</a>
       </div>
 
       <div class="footer-item">
-        <a href="faq">FAQ</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
+        <a href="faq">Help Centre</a>
+        <a href="faq">Jobs</a>
+        <a href="faq">Cookie Preference</a>
+        <a href="faq">Legal Notices</a>
       </div>
 
       <div class="footer-item">
-        <a href="faq">FAQ</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
+        <a href="faq">Account</a>
+        <a href="faq">Ways to Watch</a>
+        <a href="faq">Corporate Information</a>
+        <a href="faq">Only on Netflix</a>
       </div>
 
       <div class="footer-item">
-        <a href="faq">FAQ</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
-        <a href="faq">Investor Relations</a>
+        <a href="faq">Media Centre</a>
+        <a href="faq">Terms of Use</a>
+        <a href="faq">Contact Us</a>
       </div>
     </div>
 
